--- a/cursos.html
+++ b/cursos.html
@@ -103,7 +103,7 @@
 
                 <div class="user">
                     <a href="miCuenta.html">
-                        <img src="assets/imgs/customer01.jpg" alt="Profile Picture" id="indexProfileImg">
+                        <img src="img/no_usuario.png" alt="Profile Picture" id="indexProfileImg">
                     </a>
                 </div> 
             </div>
@@ -125,13 +125,13 @@
                         <div class="carousel-description">
                           <h3>Intro to ChatGPT and Generative AI</h3>
                           <p>ChatGPT, 38 Generative AI Tools, 10x Productivity + Creativity, 2K+ Prompts | ChatGPT, Generative AI, Prompt Engineering</p>
-                          <ion-icon name="lock-open-outline" class="lock-icon" onclick="toggleLock(event, this);"></ion-icon>
+                          <ion-icon name="lock-closed-outline" class="lock-icon red" onclick="toggleLock(event, this);"></ion-icon>
                         </div>
-                      </a>                       
+                      </a>
                 </div>
                 <button id="prevBtnPromptEngineering">&#10094;</button>
                 <button id="nextBtnPromptEngineering">&#10095;</button>
-            </div>
+            </div>>
 
             <!-- ========================= Carousel Section 2 ==================== -->
             <div class="carousel-container">
@@ -143,7 +143,7 @@
                       <div class="carousel-description">
                         <h3>Introducción a Github Copilot</h3>
                         <p>Optimiza tu Flujo de Trabajo de Desarrollo con GitHub Copilot: Consejos y Estrategias para el Éxito</p>
-                        <ion-icon name="lock-open-outline" class="lock-icon" onclick="toggleLock(event, this);"></ion-icon>
+                        <ion-icon name="lock-closed-outline" class="lock-icon red" onclick="toggleLock(event, this);"></ion-icon>
                       </div>
                     </a>                 
               
@@ -164,7 +164,7 @@
                         <div class="carousel-description">
                           <h3>Introducción a Github Advanced Security</h3>
                           <p>Short description for item1.</p>
-                          <ion-icon name="lock-open-outline" class="lock-icon" onclick="toggleLock(event, this);"></ion-icon>
+                          <ion-icon name="lock-closed-outline" class="lock-icon red" onclick="toggleLock(event, this);"></ion-icon>
                         </div>
                       </a>      
                 </div>
@@ -185,7 +185,7 @@
                         <div class="carousel-description">
                           <h3>Ai ChatBots Development Exploring Generative AI with ChatGPT</h3>
                           <p></p>
-                          <ion-icon name="lock-open-outline" class="lock-icon" onclick="toggleLock(event, this);"></ion-icon>
+                          <ion-icon name="lock-closed-outline" class="lock-icon red" onclick="toggleLock(event, this);"></ion-icon>
                         </div>
                       </a>                 
               
@@ -208,7 +208,7 @@
                       <div class="carousel-description">
                         <h3>AI 101 fundamentals for managers & leaders (100% business)</h3>
                         <p></p>
-                        <ion-icon name="lock-open-outline" class="lock-icon" onclick="toggleLock(event, this);"></ion-icon>
+                        <ion-icon name="lock-closed-outline" class="lock-icon red" onclick="toggleLock(event, this);"></ion-icon>
                       </div>
                     </a>                 
               </div>
