--- a/juego.html
+++ b/juego.html
@@ -103,10 +103,14 @@
                 </div> 
             </div>
 
-        <div class="game-container">
-            <img src="img/unity-fondo.png" alt="UNITY" class="unity-container">
-
-        </div>
+            <div class="game-container">
+                <!-- Añadir una imagen grande -->
+                <img src="/img/fondo.png" alt="Descripción de la imagen" style="width:100%; display:block;">
+            
+                <!-- Botón para jugar -->
+                <a href="/build/Build/index.html" class="play-button">Jugar Ahora</a>
+            </div>
+            
     <!-- =========== Scripts =========  -->
     <script src="js/main.js"></script>
     <script src="js/busqueda.js"></script>
