--- a/miCuenta.html
+++ b/miCuenta.html
@@ -99,7 +99,7 @@
 
                 <div class="user">
                     <a href="miCuenta.html">
-                        <img src="/img/customer01.jpg" alt="Profile Picture" id="indexProfileImg">
+                        <img src="img/no_usuario.png" alt="Profile Picture" id="indexProfileImg">
                     </a>
                 </div> 
             </div>
@@ -143,7 +143,7 @@
                         </div>
                         <div class="info">
                             <label>Coins:</label>
-                            <p>-</p>
+                            <p id="profileCoins">-</p>
                         </div>
                
                     </div>
